--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SLACK_TOKEN=a
-SIGNING_SECRET=a
+SLACK_TOKEN=xoxb-1797736975536-1775392720578-H3OtddnfJYEl1c512QpUSj3a
+SIGNING_SECRET=90d3b10aacfbc3af469be4b414b71909
 WEB_HOOK=a
